--- a/Frontend App/Login.html
+++ b/Frontend App/Login.html
@@ -23,7 +23,7 @@
 
                 <div class="field input">
                     <label for="password">Password</label>
-                    <input type="text" name="password" id="password" required>
+                    <input type="password" name="password" id="password" value="********" required>
                 </div>
 
                 <div class="field">
