--- a/Frontend App/NewUser.html
+++ b/Frontend App/NewUser.html
@@ -32,7 +32,7 @@
 
                 <div class="field input">
                     <label for="password">Password</label>
-                    <input type="text" name="password" id="password" required>
+                    <input type="text" name="password" id="password" value="********" required>
                 </div>
 
                 <div class="field input">
