Added basic js functions

--- a/Frontend App/FrontEnd Homepage/HomeFront.html
+++ b/Frontend App/FrontEnd Homepage/HomeFront.html
@@ -8,12 +8,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="scripts/bootstrap.js"></script>
+    <!-- <script src="scripts/bootstrap.js"></script>-->
+    <script src="../FrontEnd Homepage/HomeFrontFunctions.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <title>Timeless Borders Main Page</title>
 </head>
-<body>
+<body onload ="initalPageLoad()">
     <Header>
       <!-- The header section is the navbar.-->
       <div class="header">
@@ -90,7 +91,7 @@
     <body>
         <!-- Will Have to change filename here in form action
              This is the form action -->
-        <form action="scripts/file.php" method="POST">
+        <!--<form action="scripts/file.php" method="POST"> -->
           <div class="bodyContainer">
             <div class="filterSection">
               <h3>Filter By</h3>
@@ -202,7 +203,7 @@
               <!--End of 2nd row container-->
             </div>
           </div>
-        </form>
+        <!-- </form> -->
     </body>
     <!--The footer section includes the footer with info about the company and our socials etc.-->
     <footer>
