--- a/Frontend App/FrontEnd Homepage/HomeFront.html
+++ b/Frontend App/FrontEnd Homepage/HomeFront.html
@@ -13,7 +13,7 @@ Class:      CS 4003 - Software Engineering
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--<script src="scripts/bootstrap.js"></script> -->
   <script src="../FrontEnd Homepage/HomeFrontFunctions.js"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/HomeFrontStyle.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <title>Timeless Borders Main Page</title>
 </head>
