--- a/Frontend App/FrontEnd Homepage/BuyItem.html
+++ b/Frontend App/FrontEnd Homepage/BuyItem.html
@@ -11,12 +11,13 @@ Class:      CS 4003 - Software Engineering
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../FrontEnd Homepage/HomeFrontFunctions.js"></script>
-    <link rel="stylesheet" href="css/HomeFrontStyle.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="./css/HomeFrontStyle.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <title>Buy Item Page</title>
 </head>
 <body>
     <Header>
+      
         <div class="header">
             <nav class="navbar navbar-expand-lg">
               &nbsp;&nbsp;
@@ -30,21 +31,25 @@ Class:      CS 4003 - Software Engineering
                 <!--class navbar-nav formats the Home -->
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="HomeFront.html" style="color: white;">Home<span class="sr-only">(current)</span></a>
-                  </li>
+                    <div class="font">
+                      <a class="nav-link" href="HomeFront.html" style="color: white;">Home<span class="sr-only">(current)</span></a>
+                    </div>
+                    </li>
+                  <!-- Commented out About us, Services, & searchbar from the navbar
                   <li class="nav-item">
                     <a class="nav-link" href="#" style="color: white;">Services</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" style="color: white;">About Us</a>
                   </li>
-                  <!--Form tag for the search bar-->
+                  Form tag for the search bar
                   <form action="scripts/file.php" method="POST">
                     <div class="searchBar">
                       <input type="text" name="searchBar" id="searchBar" placeholder="Search.." width=20>
                     </div>
                   </form>
-                  <!--End of form tag for search bar-->
+                  End of form tag for search bar
+                  -->
                 </ul>
               </div>
               <!--Form tag for the Profile bar-->
@@ -57,18 +62,17 @@ Class:      CS 4003 - Software Engineering
                         <div class="dropdown">
                             <button class="dropbtn">Profile</button>
                             <div class="dropdown-content">
-                              <a href="#">Profile</a>
-                              <a href="horderHistory.html">Order History</a>
-                              <a href="login.html">Logout</a>
+                              <a href="./orders.php">Order History</a>
+                              <a href="./login.html">Logout</a>
                             </div>
                           </div>
                     </li>
                     <img src="images/cart.jpg" width="50" height="40" href="#">
                     <li class="nav-item h">
-                      <a class="nav-link headerFont" href="checkout.html" style="color: white;">Checkout</a>
+                      <a class="nav-link headerFont" href="checkout.html" style="color:white;">Checkout</a>
                     </li>
                     <li class="nav-item h">
-                      <a class="nav-link headerFont" href="login.html" style="color: white;">Logout</a>
+                      <a class="nav-link headerFont" href="login.html" style="color:white;">Logout</a>
                     </li>
                   </ul>
                 </div>
@@ -79,8 +83,9 @@ Class:      CS 4003 - Software Engineering
               <div class="subHeader">
                 <div class="row">
                   <div class="col-md-2">
-                    <h4>Customer Address</h4>
+                    <h4 style="color:white;">Customer Address</h4>
                   </div>
+                  <!-- Commented out the categories of frame types 
                   <div class="col-md-1" style="margin-left: 40%;">
                     <a class="nav-link headerFont" href="category1.html" style="color: white; font-size: 20;">Standard Frames</a>
                   </div>
@@ -93,6 +98,7 @@ Class:      CS 4003 - Software Engineering
                   <div class="col-md-1">
                     <a class="nav-link headerFont" href="category4.html" style="color: white; font-size: 20;">Floating Frames</a>
                   </div>
+                  -->
                 </div>
               </div>
           </div>
