Finished mapping the buy item page

--- a/Frontend App/FrontEnd Homepage/BuyItem.html
+++ b/Frontend App/FrontEnd Homepage/BuyItem.html
@@ -97,7 +97,7 @@ Class:      CS 4003 - Software Engineering
               </div>
           </div>
     </Header>
-    <body onload="getBuyPageHTML()">
+    <body onload="getBuyPageHTML(); calculateTotal()">
         <!--Start of form action-->
         <!--<form action="scripts/file.php" method="POST">-->
         
