--- a/Frontend App/FrontEnd Homepage/HomeFront.html
+++ b/Frontend App/FrontEnd Homepage/HomeFront.html
@@ -113,7 +113,7 @@ Class:      CS 4003 - Software Engineering
     </div>
   </Header>
 
-  <body onload="pageStartup()">
+  <body onload="HomeFrontPageStartUp()">
       <div class="bodyContainer">
         <!-- Most likely won't have a filter section as we don't know how to make a filter section work
             Start of filter Section
