Updating the js file to have the php call

--- a/Frontend App/FrontEnd Homepage/BuyItem.html
+++ b/Frontend App/FrontEnd Homepage/BuyItem.html
@@ -53,7 +53,7 @@ Class:      CS 4003 - Software Engineering
                 </ul>
               </div>
               <!--Form tag for the Profile bar-->
-              <form action="scripts/file.php" method="POST">
+              <!--<form method="POST">-->
               <div>
                 <div class="collapse navbar-collapse headerFont" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,22 +62,22 @@ Class:      CS 4003 - Software Engineering
                         <div class="dropdown">
                             <button class="dropbtn">Profile</button>
                             <div class="dropdown-content">
-                              <a href="./orders.php">Order History</a>
-                              <a href="./login.html">Logout</a>
+                              <a href="orders.php">Order History</a>
+                              <a href="login.html">Logout</a>
                             </div>
                           </div>
                     </li>
                     <img src="images/cart.jpg" width="50" height="40" href="#">
                     <li class="nav-item h">
-                      <a class="nav-link headerFont" href="checkout.html" style="color:white;">Checkout</a>
+                      <a class="nav-link headerFont" href="./checkout.php" style="color:white;">Checkout</a>
                     </li>
                     <li class="nav-item h">
-                      <a class="nav-link headerFont" href="login.html" style="color:white;">Logout</a>
+                      <a class="nav-link headerFont" href="./login.html" style="color:white;">Logout</a>
                     </li>
                   </ul>
                 </div>
               </div>
-            </form>
+            <!--</form>-->
             </div>
               </nav>
               <div class="subHeader">
